--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <header>
                 <h1>Evan</h1>
                 <h1>McCoy</h1>
+                <h2>Developer /</h2>
                 <h2>Future Moon Dweller</h2>
                 <a class="fab fa-github" href="https://github.com/evmcco"></a>
                 <a class="fab fa-codepen" href="https://codepen.io/evmcco/"></a>
