--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <body>
         <main>
             <header>
-                <h1>Evan</h1>
-                <h1>McCoy</h1>
-                <h2>Developer /</h2>
-                <h2>Future Moon Dweller</h2>
+                <h1 class="firstname">Evan</h1>
+                <h1 class="lastname">McCoy</h1>
+                <h2 class="firstsub">Developer /</h2>
+                <h2 class="secondsub">Future Moon Dweller</h2>
                 <a class="far fa-envelope" href="mailto:evan.mccoy@gmail.com"></a>
                 <a class="fab fa-github" href="https://github.com/evmcco"></a>
                 <a class="fab fa-codepen" href="https://codepen.io/evmcco/"></a>
                 <a class="fab fa-linkedin" href="https://www.linkedin.com/in/evantmccoy/"></a>
             </header>
             <div class="scroll--notif">
-                <i class="fas fa-chevron-down"></i>
+                <a href="#infobox" class="fas fa-chevron-down"></a>
             </div>
-            <div class="info">
+            <div id="infobox" class="info">
                 <h3>Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia. </h3>
                 <p>Before enrolling in DigitalCraft’s development bootcamp, I was a Product Manager, primarily working on enterprise web apps. Pivoting to development has allowed me to get back to my engineering roots, and put me back in touch with my inner builder. I have a passion for engaging, interactive digital experiences, and am currently learning Swift so I can step into the world of Mobile Dev.</p>
                 <p>I grew up in Atlanta, and graduated from Georgia Tech with a degree in Industrial Engineering. Music is my first love - I’ve been playing the Saxophone for 15 years and was a DJ in college. Most nights between October and June you will see a Basketball game on my TV while I’m coding or reading. Lastly, my two dogs Pepper and Tucker keep me sane and well-exercised.  </p>
