--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
             <header>
                 <h1 class="firstname">Evan</h1>
                 <h1 class="lastname">McCoy</h1>
-                <h2 class="firstsub">Developer /</h2>
-                <h2 class="secondsub">Future Moon Dweller</h2>
-                <a class="far fa-envelope" href="mailto:evan.mccoy@gmail.com"></a>
-                <a class="fab fa-github" href="https://github.com/evmcco"></a>
-                <a class="fab fa-codepen" href="https://codepen.io/evmcco/"></a>
-                <a class="fab fa-linkedin" href="https://www.linkedin.com/in/evantmccoy/"></a>
+                <div class="subtitle">
+                    <h2 class="firstsub">Developer /</h2>
+                    <h2 class="secondsub">Future Moon Dweller</h2>
+                </div>
+                <div class="social--links">
+                    <a class="far fa-envelope" href="mailto:evan.mccoy@gmail.com"></a>
+                    <a class="fab fa-github" href="https://github.com/evmcco"></a>
+                    <a class="fab fa-codepen" href="https://codepen.io/evmcco/"></a>
+                    <a class="fab fa-linkedin" href="https://www.linkedin.com/in/evantmccoy/"></a>
+                </div>
             </header>
             <div class="scroll--notif">
                 <a href="#infobox" class="fas fa-chevron-down"></a>
