--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <header>
                 <h1 class="firstname">Evan</h1>
                 <h1 class="lastname">McCoy</h1>
+                
                 <div class="subtitle">
                     <h2 class="firstsub">Developer /</h2>
-                    <h2 class="secondsub">Future Moon Dweller</h2>
+                    <h2 class="secondsub">Future Moon Resident</h2>
                 </div>
                 <div class="social--links">
                     <a class="far fa-envelope" href="mailto:evan.mccoy@gmail.com"></a>
                     <a class="fab fa-github" href="https://github.com/evmcco"></a>
                     <a class="fab fa-linkedin" href="https://www.linkedin.com/in/evantmccoy/"></a>
-                    <a class="fab fa-codepen" href="https://codepen.io/evmcco/"></a>
                 </div>
             </header>
             <div class="scroll--notif">
@@ -30,9 +30,10 @@
             </div>
             <div id="infobox" class="info">
                 <h3>Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia. </h3>
-                <p>Before enrolling in DigitalCraft’s development bootcamp, I was a Product Manager, primarily working on enterprise web apps. Pivoting to development has allowed me to get back to my engineering roots, and put me back in touch with my inner builder. I have a passion for engaging, interactive digital experiences, and am currently learning Swift so I can step into the world of Mobile Dev.</p>
-                <p>I grew up in Atlanta, and graduated from Georgia Tech with a degree in Industrial Engineering. Music is my first love - I’ve been playing the Saxophone for 15 years and was a DJ in college. Most nights between October and June you will see a Basketball game on my TV while I’m coding or reading. Lastly, my two dogs Pepper and Tucker keep me sane and well-exercised.  </p>
                 <img class = "picture" src="Evan Profile Pic.jpeg"/>
+                <p>In April I quit my job as a Product Manager to study Full Stack Web Development at DigitalCrafts full-time. Previously I've had roles in QA, Project Management, and Consulting in addition to Product Management. Pivoting to development has allowed me to get back to my engineering roots, and put me back in touch with my inner builder. I feel the best when I'm able to build and implement one of the crazy ideas that I come up with.</p>
+                <p>I grew up in Atlanta, and graduated from Georgia Tech with a degree in Industrial Engineering. Music is my first love - I’ve been playing the Saxophone for 15 years and was a DJ in college. A disproportionate amount of my income goes into buying rare sneakers. Most nights between October and June you will see a Basketball game on my TV while I’m coding or reading. Lastly, my two dogs Pepper and Tucker keep me sane and well-exercised.  </p>
+                <p>If you're curious about my subtitle - I hope to one day be healthy and wealthy enough to retire on the Moon, in a Condo with a view of the Earth.</p>
             </div>
         </main>
     </body>
