finished building projects list

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <title>About Me</title>
+        <title>evmcco</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     </head>
     <body>
         <main>
@@ -20,9 +20,9 @@
                     <h2 class="secondsub">Future Moon Resident</h2>
                 </div>
                 <div class="social--links">
-                    <a class="far fa-envelope" href="mailto:evan.mccoy@gmail.com"></a>
-                    <a class="fab fa-github" href="https://github.com/evmcco"></a>
-                    <a class="fab fa-linkedin" href="https://www.linkedin.com/in/evantmccoy/"></a>
+                    <a class="far fa-envelope header-image" href="mailto:evan.mccoy@gmail.com"></a>
+                    <a class="fab fa-github header-image" href="https://github.com/evmcco" target="_blank"></a>
+                    <a class="fab fa-linkedin header-image" href="https://www.linkedin.com/in/evantmccoy/" target="_blank"></a>
                 </div>
             </header>
             <div class="scroll--notif">
@@ -30,10 +30,40 @@
             </div>
             <div id="infobox" class="info">
                 <h3>Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia. </h3>
-                <img class = "picture" src="Evan Profile Pic.jpeg"/>
-                <p>In April I quit my job as a Product Manager to study Full Stack Web Development at DigitalCrafts full-time. Previously I've had roles in QA, Project Management, and Consulting in addition to Product Management. Pivoting to development has allowed me to get back to my engineering roots, and put me back in touch with my inner builder. I feel the best when I'm able to build and implement one of the crazy ideas that I come up with.</p>
-                <p>I grew up in Atlanta, and graduated from Georgia Tech with a degree in Industrial Engineering. Music is my first love - I’ve been playing the Saxophone for 15 years and was a DJ in college. A disproportionate amount of my income goes into buying rare sneakers. Most nights between October and June you will see a Basketball game on my TV while I’m coding or reading. Lastly, my two dogs Pepper and Tucker keep me sane and well-exercised.  </p>
+                <img class = "image" src="images/Evan Profile Pic.jpeg"/>
+                <p>In April I left my job as a Product Manager to study Full Stack Web Development at DigitalCrafts full-time. Previously I've also had roles in QA, Project Management, and Consulting. Pivoting to development has allowed me to get back to my engineering roots, and put me back in touch with my inner builder. I feel the best when I'm able to build and implement one of the crazy ideas that I come up with.</p>
+                <p>I grew up in Atlanta, and graduated from Georgia Tech with a degree in Industrial Engineering. Music is my first love - I’ve been playing the Saxophone for 15 years and was a DJ in college. I also have two dogs, Pepper and Tucker, who keep me sane and well-exercised.</p>
                 <p>If you're curious about my subtitle - I hope to one day be healthy and wealthy enough to retire on the Moon, in a Condo with a view of the Earth.</p>
+                <div class="projects-list">
+                    <h2>Projects:</h2>
+                    <h3 class="project-header">DigitalCrafts Project Database</h3>
+                    <h3>
+                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/DCPD" target="_blank"></a>
+                        <a class="fas fa-external-link-alt project-info-link" href="http://ec2-18-224-8-223.us-east-2.compute.amazonaws.com/" target="_blank"></a>
+                    </h3>
+                    <p>The DigitalCrafts Project Database is a full-stack project for DigitalCrafts built with Node, Express, PostgreSQL, HTML, CSS, Javascript, and ES6 Renderer. It was built with a team of 3 over the course of 3 days in class. We built the DCPD to be a solution to a problem that many bootcamp students have: finding inspiration (or help) when building projects. Any DigitalCrafts student or alumni can submit a project to the database (via Slack authentication), and the database is viewable to everyone. </p>
+                    <img class="image" src="images/DCPD Screenshot.png"/>
+                    <h3 class="project-header">To Mom, Love Evan</h3>
+                    <h3>
+                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/tomomloveevan" target="_blank"></a>
+                        <a class="fas fa-external-link-alt project-info-link" href="http://www.tomomloveevan.com/" target="_blank"></a>
+                    </h3>
+                    <p>To Mom, Love Evan is an interactive card I made for my mom for Mother's Day '19. My mom is nortoriously hard to shop for so I got her something no one else could, a website! I also took this as an opportunity to learn Three.js, a javascript library for 3d image rendering, built on WebGL.</p>
+                    <img class="image" src="images/TMLE GIF.gif"/>
+                    <h3 class="project-header">Astrologic</h3>
+                    <h3>
+                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/Astrologic-Fantasy-Sports" target="_blank"></a>
+                        <a class="fas fa-external-link-alt project-info-link" href="http://ec2-3-17-12-9.us-east-2.compute.amazonaws.com/" target="_blank"></a>
+                    </h3>
+                    <p>Astrologic is a front-end project for DigitalCrafts, built by a team of 3 over 3 days of class. Inspired by fantasy sports, we wanted a way to find an edge when competing with our friends, so we decided to use information that no one else was to perfect our lineups - horoscopes. The page is built with HTML, CSS, and Javascript, and utilzies 2 APIs: the Wikipedia API to return player informationa and photos, and an Astrology API to return horoscope data.</p>
+                    <img class="image" src="images/Astrologic Screenshot.png"/>
+                    <h3 class="project-header">Tower</h3>
+                    <h3>
+                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/tower" target="_blank"></a>
+                    </h3>
+                    <p>Tower is a pygame project for DigitalCrafts. I was inspired by some of my favorite video games: Dungeon Crawl Stone Soup and Tiny Rogue. As you traverse through the Tower, you encounter more and more enemies, randomly placed throughout the room. The game technically has no end, as each level continues to add to the monsters you must defeat.</p>
+                    <img class="image" src="images/Tower GIF2.gif"/>
+                </div>
             </div>
         </main>
     </body>
