adding skills list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
         <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     </head>
     <body>
@@ -63,6 +64,16 @@
                     </h3>
                     <p>Tower is a pygame project for DigitalCrafts. I was inspired by some of my favorite video games: Dungeon Crawl Stone Soup and Tiny Rogue. As you traverse through the Tower, you encounter more and more enemies, randomly placed throughout the room. The game technically has no end, as each level continues to add to the monsters you must defeat.</p>
                     <img class="image" src="images/Tower GIF2.gif"/>
+                </div>
+                <h2>Skills:</h2>
+                <div class="skills-list">
+                    <h1 class="skills-item"><i class="devicon-html5-plain-wordmark"></i></h1>
+                    <h1 class="skills-item"><i class="devicon-css3-plain-wordmark"></i></h1>
+                    <h1 class="skills-item"><i class="devicon-javascript-plain"></i></h1>
+                    <h1 class="skills-item"><i class="devicon-nodejs-plain-wordmark"></i></h1>
+                    <h1 class="skills-item"><i class="devicon-express-original-wordmark"></i></h1>
+                    <h1 class="skills-item"><i class="devicon-postgresql-plain-wordmark"></i></h1>
+                    <h1 class="skills-item"><i class="devicon-python-plain-wordmark"></i></h1>
                 </div>
             </div>
         </main>
