adding resume link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 </div>
                 <div class="social--links">
                     <a class="far fa-envelope header-image" href="mailto:evan.mccoy@gmail.com"></a>
+                    <a class="far fa-file-pdf header-image" href="https://drive.google.com/file/d/1VfVl1IYuzm1d9XStLg0ydeimfo9G_20L/view?usp=sharing" target="_blank"></a>
                     <a class="fab fa-github header-image" href="https://github.com/evmcco" target="_blank"></a>
                     <a class="fab fa-linkedin header-image" href="https://www.linkedin.com/in/evantmccoy/" target="_blank"></a>
                 </div>
@@ -70,7 +71,7 @@
                     <h1 class="skills-item"><i class="devicon-html5-plain-wordmark"></i></h1>
                     <h1 class="skills-item"><i class="devicon-css3-plain-wordmark"></i></h1>
                     <h1 class="skills-item"><i class="devicon-javascript-plain"></i></h1>
-                    <h1 class="skills-item"><i class="devicon-nodejs-plain-wordmark"></i></h1>
+                    <h1 class="skills-item"><i class="devicon-nodejs-plain-wordmark"></i></h1>  
                     <h1 class="skills-item"><i class="devicon-express-original-wordmark"></i></h1>
                     <h1 class="skills-item"><i class="devicon-postgresql-plain-wordmark"></i></h1>
                     <h1 class="skills-item"><i class="devicon-python-plain-wordmark"></i></h1>
