changed id for infobox to about

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </div>
             </header>
             <div class="scroll--notif">
-                <a href="#infobox" class="fas fa-chevron-down"></a>
+                <a href="#about" class="fas fa-chevron-down"></a>
             </div>
-            <div id="infobox" class="info">
+            <div id="about" class="info">
                 <h3>Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia. </h3>
                 <img class = "image" src="images/Evan Profile Pic.jpeg"/>
                 <p>In April I left my job as a Product Manager to study Full Stack Web Development at DigitalCrafts full-time. Previously I've also had roles in QA, Project Management, and Consulting. Pivoting to development has allowed me to get back to my engineering roots, and put me back in touch with my inner builder. I feel the best when I'm able to build and implement one of the crazy ideas that I come up with.</p>
