--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="far fa-envelope header-image" href="mailto:evan.mccoy@gmail.com"></a>
                     <a class="far fa-file-pdf header-image" href="https://drive.google.com/file/d/1VfVl1IYuzm1d9XStLg0ydeimfo9G_20L/view?usp=sharing" target="_blank"></a>
                     <a class="fab fa-github header-image" href="https://github.com/evmcco" target="_blank"></a>
-                    <a class="fab fa-linkedin header-image" href="https://www.linkedin.com/in/evantmccoy/" target="_blank"></a>
+                    <a class="fab fa-linkedin header-image" href="https://www.linkedin.com/in/evmcco/" target="_blank"></a>
                 </div>
             </header>
             <div class="scroll--notif">
