--- a/index.html
+++ b/index.html
@@ -1,82 +1,200 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <title>evmcco</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-        <link rel="shortcut icon" type="image/png" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/198/rocket_1f680.png"/>
-    </head>
-    <body>
-        <main>
-            <header>
-                <h1 class="firstname">Evan</h1>
-                <h1 class="lastname">McCoy</h1>
-                
-                <div class="subtitle">
-                    <h2 class="firstsub">Developer /</h2>
-                    <h2 class="secondsub">Future Moon Resident</h2>
-                </div>
-                <div class="social--links">
-                    <a class="far fa-envelope header-image" href="mailto:evan.mccoy@gmail.com"></a>
-                    <a class="far fa-file-pdf header-image" href="https://drive.google.com/file/d/1VfVl1IYuzm1d9XStLg0ydeimfo9G_20L/view?usp=sharing" target="_blank"></a>
-                    <a class="fab fa-github header-image" href="https://github.com/evmcco" target="_blank"></a>
-                    <a class="fab fa-linkedin header-image" href="https://www.linkedin.com/in/evmcco/" target="_blank"></a>
-                </div>
-            </header>
-            <div class="scroll--notif">
-                <a href="#about" class="fas fa-chevron-down"></a>
-            </div>
-            <div id="about" class="info">
-                <h3>Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia. </h3>
-                <img class = "image" src="./images/Evan_Profile_Pic.jpeg"/>
-                <p>In April I left my job as a Product Manager to study Full Stack Web Development at DigitalCrafts full-time. Previously I've also had roles in QA, Project Management, and Consulting. Pivoting to development has allowed me to get back to my engineering roots, and put me back in touch with my inner builder. I feel the best when I'm able to build and implement one of the crazy ideas that I come up with.</p>
-                <p>I grew up in Atlanta, and graduated from Georgia Tech with a degree in Industrial Engineering. Music is my first love - I’ve been playing the Saxophone for 15 years and was a DJ in college. I also have two dogs, Pepper and Tucker, who keep me sane and well-exercised.</p>
-                <p>If you're curious about my subtitle - I hope to one day be healthy and wealthy enough to retire on the Moon, in a Condo with a view of the Earth.</p>
-                <div class="projects-list">
-                    <h2>Projects:</h2>
-                    <h3 class="project-header">DigitalCrafts Project Database</h3>
-                    <h3>
-                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/DCPD" target="_blank"></a>
-                        <a class="fas fa-external-link-alt project-info-link" href="http://ec2-18-224-8-223.us-east-2.compute.amazonaws.com/" target="_blank"></a>
-                    </h3>
-                    <p>The DigitalCrafts Project Database is a full-stack project for DigitalCrafts built with Node, Express, PostgreSQL, HTML, CSS, Javascript, and ES6 Renderer. It was built with a team of 3 over the course of 3 days in class. We built the DCPD to be a solution to a problem that many bootcamp students have: finding inspiration (or help) when building projects. Any DigitalCrafts student or alumni can submit a project to the database (via Slack authentication), and the database is viewable to everyone. </p>
-                    <img class="image" src="./images/DCPD_Screenshot.png"/>
-                    <h3 class="project-header">To Mom, Love Evan</h3>
-                    <h3>
-                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/tomomloveevan" target="_blank"></a>
-                        <a class="fas fa-external-link-alt project-info-link" href="http://www.tomomloveevan.com/" target="_blank"></a>
-                    </h3>
-                    <p>To Mom, Love Evan is an interactive card I made for my mom for Mother's Day '19. My mom is nortoriously hard to shop for so I got her something no one else could, a website! I also took this as an opportunity to learn Three.js, a javascript library for 3d image rendering, built on WebGL.</p>
-                    <img class="image" src="./images/TMLE_GIF.gif"/>
-                    <h3 class="project-header">Astrologic</h3>
-                    <h3>
-                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/Astrologic-Fantasy-Sports" target="_blank"></a>
-                        <a class="fas fa-external-link-alt project-info-link" href="http://ec2-3-17-12-9.us-east-2.compute.amazonaws.com/" target="_blank"></a>
-                    </h3>
-                    <p>Astrologic is a front-end project for DigitalCrafts, built by a team of 3 over 3 days of class. Inspired by fantasy sports, we wanted a way to find an edge when competing with our friends, so we decided to use information that no one else was to perfect our lineups - horoscopes. The page is built with HTML, CSS, and Javascript, and utilzies 2 APIs: the Wikipedia API to return player informationa and photos, and an Astrology API to return horoscope data.</p>
-                    <img class="image" src="./images/Astrologic_Screenshot.png"/>
-                    <h3 class="project-header">Tower</h3>
-                    <h3>
-                        <a class="fab fa-github project-info-link" href="https://github.com/evmcco/tower" target="_blank"></a>
-                    </h3>
-                    <p>Tower is a pygame project for DigitalCrafts. I was inspired by some of my favorite video games: Dungeon Crawl Stone Soup and Tiny Rogue. As you traverse through the Tower, you encounter more and more enemies, randomly placed throughout the room. The game technically has no end, as each level continues to add to the monsters you must defeat.</p>
-                    <img class="image" src="./images/Tower_GIF2.gif"/>
-                </div>
-                <h2>Skills:</h2>
-                <div class="skills-list">
-                    <h1 class="skills-item"><i class="devicon-html5-plain-wordmark"></i></h1>
-                    <h1 class="skills-item"><i class="devicon-css3-plain-wordmark"></i></h1>
-                    <h1 class="skills-item"><i class="devicon-javascript-plain"></i></h1>
-                    <h1 class="skills-item"><i class="devicon-nodejs-plain-wordmark"></i></h1>  
-                    <h1 class="skills-item"><i class="devicon-express-original-wordmark"></i></h1>
-                    <h1 class="skills-item"><i class="devicon-postgresql-plain-wordmark"></i></h1>
-                    <h1 class="skills-item"><i class="devicon-python-plain-wordmark"></i></h1>
-                </div>
-            </div>
-        </main>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>evmcco</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/198/rocket_1f680.png"
+    />
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1 class="firstname">Evan</h1>
+        <h1 class="lastname">McCoy</h1>
+
+        <div class="subtitle">
+          <h2 class="firstsub">Developer /</h2>
+          <h2 class="secondsub">Future Moon Resident</h2>
+        </div>
+        <div class="social--links">
+          <a
+            class="far fa-envelope header-image"
+            href="mailto:evan.mccoy@gmail.com"
+          ></a>
+          <a
+            class="far fa-file-pdf header-image"
+            href="https://drive.google.com/file/d/1VfVl1IYuzm1d9XStLg0ydeimfo9G_20L/view?usp=sharing"
+            target="_blank"
+          ></a>
+          <a
+            class="fab fa-github header-image"
+            href="https://github.com/evmcco"
+            target="_blank"
+          ></a>
+          <a
+            class="fab fa-linkedin header-image"
+            href="https://www.linkedin.com/in/evmcco/"
+            target="_blank"
+          ></a>
+        </div>
+      </header>
+      <div class="scroll--notif">
+        <a href="#about" class="fas fa-chevron-down"></a>
+      </div>
+      <div id="about" class="info">
+        <h3>
+          Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia.
+        </h3>
+        <img class="image" src="./images/Evan_Profile_Pic.jpeg" />
+        <p>
+          In April I left my job as a Product Manager to study Full Stack Web
+          Development at DigitalCrafts full-time. Previously I've also had roles
+          in QA, Project Management, and Consulting. Pivoting to development has
+          allowed me to get back to my engineering roots, and put me back in
+          touch with my inner builder. I feel the best when I'm able to build
+          and implement one of the crazy ideas that I come up with.
+        </p>
+        <p>
+          I grew up in Atlanta, and graduated from Georgia Tech with a degree in
+          Industrial Engineering. Music is my first love - I’ve been playing the
+          Saxophone for 15 years and was a DJ in college. I also have two dogs,
+          Pepper and Tucker, who keep me sane and well-exercised.
+        </p>
+        <p>
+          If you're curious about my subtitle - I hope to one day be healthy and
+          wealthy enough to retire on the Moon, in a Condo with a view of the
+          Earth.
+        </p>
+        <div class="projects-list">
+          <h2>Projects:</h2>
+          <h3 class="project-header">DigitalCrafts Project Database</h3>
+          <h3>
+            <a
+              class="fab fa-github project-info-link"
+              href="https://github.com/evmcco/DCPD"
+              target="_blank"
+            ></a>
+            <a
+              class="fas fa-external-link-alt project-info-link"
+              href="http://ec2-18-224-8-223.us-east-2.compute.amazonaws.com/"
+              target="_blank"
+            ></a>
+          </h3>
+          <p>
+            The DigitalCrafts Project Database is a full-stack project for
+            DigitalCrafts built with Node, Express, PostgreSQL, HTML, CSS,
+            Javascript, and ES6 Renderer. It was built with a team of 3 over the
+            course of 3 days in class. We built the DCPD to be a solution to a
+            problem that many bootcamp students have: finding inspiration (or
+            help) when building projects. Any DigitalCrafts student or alumni
+            can submit a project to the database (via Slack authentication), and
+            the database is viewable to everyone.
+          </p>
+          <img class="image" src="./images/DCPD_Screenshot.png" />
+          <h3 class="project-header">To Mom, Love Evan</h3>
+          <h3>
+            <a
+              class="fab fa-github project-info-link"
+              href="https://github.com/evmcco/tomomloveevan"
+              target="_blank"
+            ></a>
+            <a
+              class="fas fa-external-link-alt project-info-link"
+              href="http://www.tomomloveevan.com/"
+              target="_blank"
+            ></a>
+          </h3>
+          <p>
+            To Mom, Love Evan is an interactive card I made for my mom for
+            Mother's Day '19. My mom is nortoriously hard to shop for so I got
+            her something no one else could, a website! I also took this as an
+            opportunity to learn Three.js, a javascript library for 3d image
+            rendering, built on WebGL.
+          </p>
+          <img class="image" src="./images/TMLE_GIF.gif" />
+          <h3 class="project-header">Astrologic</h3>
+          <h3>
+            <a
+              class="fab fa-github project-info-link"
+              href="https://github.com/evmcco/Astrologic-Fantasy-Sports"
+              target="_blank"
+            ></a>
+            <a
+              class="fas fa-external-link-alt project-info-link"
+              href="http://ec2-3-17-12-9.us-east-2.compute.amazonaws.com/"
+              target="_blank"
+            ></a>
+          </h3>
+          <p>
+            Astrologic is a front-end project for DigitalCrafts, built by a team
+            of 3 over 3 days of class. Inspired by fantasy sports, we wanted a
+            way to find an edge when competing with our friends, so we decided
+            to use information that no one else was to perfect our lineups -
+            horoscopes. The page is built with HTML, CSS, and Javascript, and
+            utilzies 2 APIs: the Wikipedia API to return player informationa and
+            photos, and an Astrology API to return horoscope data.
+          </p>
+          <img class="image" src="./images/Astrologic_Screenshot.png" />
+          <h3 class="project-header">Tower</h3>
+          <h3>
+            <a
+              class="fab fa-github project-info-link"
+              href="https://github.com/evmcco/tower"
+              target="_blank"
+            ></a>
+          </h3>
+          <p>
+            Tower is a pygame project for DigitalCrafts. I was inspired by some
+            of my favorite video games: Dungeon Crawl Stone Soup and Tiny Rogue.
+            As you traverse through the Tower, you encounter more and more
+            enemies, randomly placed throughout the room. The game technically
+            has no end, as each level continues to add to the monsters you must
+            defeat.
+          </p>
+          <img class="image" src="./images/Tower_GIF2.gif" />
+        </div>
+        <h2>Skills:</h2>
+        <div class="skills-list">
+          <h1 class="skills-item">
+            <i class="devicon-html5-plain-wordmark"></i>
+          </h1>
+          <h1 class="skills-item">
+            <i class="devicon-css3-plain-wordmark"></i>
+          </h1>
+          <h1 class="skills-item"><i class="devicon-javascript-plain"></i></h1>
+          <h1 class="skills-item">
+            <i class="devicon-react-original-wordmark"></i>
+          </h1>
+          <h1 class="skills-item">
+            <i class="devicon-nodejs-plain-wordmark"></i>
+          </h1>
+          <h1 class="skills-item">
+            <i class="devicon-express-original-wordmark"></i>
+          </h1>
+          <h1 class="skills-item">
+            <i class="devicon-postgresql-plain-wordmark"></i>
+          </h1>
+          <h1 class="skills-item">
+            <i class="devicon-python-plain-wordmark"></i>
+          </h1>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
