adding heatseeker and mscraps entries

--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
         <a href="#about" class="fas fa-chevron-down"></a>
       </div>
       <div id="about" class="info">
-        <h3>
+        <h2 class="info-heading">
           Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia.
-        </h3>
-        <img class="image" src="./images/Evan_Profile_Pic.jpeg" />
+        </h2>
+        <img
+          class="image"
+          src="./images/Evan_Profile_Pic.jpeg"
+          style="border: none;"
+        />
         <p>
           In April I left my job as a Product Manager to study Full Stack Web
           Development at DigitalCrafts full-time. Previously I've also had roles
@@ -83,6 +87,55 @@
         </p>
         <div class="projects-list">
           <h2>Projects:</h2>
+          <h3 class="project-header">Heatseeker</h3>
+          <h3>
+            <a
+              class="fab fa-github project-info-link"
+              href="https://github.com/evmcco/Heatseeker"
+              target="_blank"
+            ></a>
+            <a
+              class="fas fa-external-link-alt project-info-link"
+              href="https://www.heatseekerapp.com/"
+              target="_blank"
+            ></a>
+          </h3>
+          <p>
+            Heatseeker is an app that helps sneaker heads land the hottest new
+            sneakers from local sneaker stores when they’re released. Heatseeker
+            is a true passion project of mine, as I love collecting sneakers
+            myself. As new raffles are announced, users can elect to receive
+            notifications for instant updates. The app is built in React Native,
+            with a backend using Node and Express with a PostgreSQL database. It
+            has not been released to the app stores yet, stay tuned!
+          </p>
+          <div class="image">
+            <img
+              src="./images/Heatseeker_Screenshot.png"
+              style="display: block; margin: auto; width: 50%;"
+            />
+          </div>
+          <h3 class="project-header">MS Craps</h3>
+          <h3>
+            <a
+              class="fab fa-github project-info-link"
+              href="https://github.com/evmcco/MScraps"
+              target="_blank"
+            ></a>
+            <a
+              class="fas fa-external-link-alt project-info-link"
+              href="https://www.mscraps.xyz/"
+              target="_blank"
+            ></a>
+          </h3>
+          <p>
+            MS (Microsoft) Craps is an old-school Microsoft inspired Craps
+            simulator game I built in React. The implementation is a little
+            simpler than the game you will find in Casinos; players can wager on
+            Pass, Field, Come, and Place bets. This project was built in 3 days
+            by myself as part of my coursework at DigitalCrafts.
+          </p>
+          <img class="image" src="./images/MSCraps_Screenshot.png" />
           <h3 class="project-header">DigitalCrafts Project Database</h3>
           <h3>
             <a
@@ -167,7 +220,11 @@
             has no end, as each level continues to add to the monsters you must
             defeat.
           </p>
-          <img class="image" src="./images/Tower_GIF2.gif" />
+          <img
+            class="image"
+            src="./images/Tower_GIF2.gif"
+            style="border:none;"
+          />
         </div>
         <h2>Skills:</h2>
         <div class="skills-list">
