--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
         <h2 class="info-heading">
           Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia.
         </h2>
-        <img
-          class="image"
-          src="./images/Evan_Profile_Pic.jpeg"
-          style="border: none;"
-        />
+        <img class="image" src="./images/Headshot.jpg" style="border: none;" />
         <p>
           In April I left my job as a Product Manager to study Full Stack Web
           Development at DigitalCrafts full-time. Previously I've also had roles
