new project updates and some styling tweaks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="subtitle">
           <h2 class="firstsub">Developer /</h2>
-          <h2 class="secondsub">Future Moon Resident</h2>
+          <h2 class="secondsub">Aspiring Astronaut</h2>
         </div>
         <div class="social--links">
           <a
@@ -39,7 +39,7 @@
           ></a>
           <a
             class="far fa-file-pdf header-image"
-            href="https://drive.google.com/file/d/1kMUHystogwAKBs9QuzZlnIYVHSQ0AROG/view?usp=sharing"
+            href="./Evan_McCoy_Resume.pdf"
             target="_blank"
           ></a>
           <a
@@ -58,90 +58,94 @@
         <a href="#about" class="fas fa-chevron-down"></a>
       </div>
       <div id="about" class="info">
-        <h2 class="info-heading">
-          Hey there! My name is Evan and I’m a Developer from Atlanta, Georgia.
-        </h2>
-        <img class="image" src="./images/Headshot.jpg" style="border: none;" />
-        <p>
-          In April I left my job as a Product Manager to study Full Stack Web
-          Development at DigitalCrafts full-time. Previously I've also had roles
-          in QA, Project Management, and Consulting. Pivoting to development has
-          allowed me to get back to my engineering roots, and put me back in
-          touch with my inner builder. I feel the best when I'm able to build
-          and implement one of the crazy ideas that I come up with.
-        </p>
-        <p>
-          I grew up in Atlanta, and graduated from Georgia Tech with a degree in
-          Industrial Engineering. Music is my first love - I’ve been playing the
-          Saxophone for 15 years and was a DJ in college. I also have two dogs,
-          Pepper and Tucker, who keep me sane and well-exercised.
-        </p>
-        <p>
-          If you're curious about my subtitle - I hope to one day be healthy and
-          wealthy enough to retire on the Moon, in a Condo with a view of the
-          Earth.
-        </p>
-        <div class="projects-list">
-          <h2>Projects:</h2>
-          <h3 class="project-header">Heatseeker</h3>
-          <h3>
-            <a
-              class="fab fa-github project-info-link"
-              href="https://github.com/evmcco/Heatseeker"
-              target="_blank"
-            ></a>
-            <a
-              class="fas fa-external-link-alt project-info-link"
-              href="https://www.heatseekerapp.com/"
-              target="_blank"
-            ></a>
-          </h3>
+        <section>
+          <h2 class="info-heading">
+            Hey there! My name is Evan and I’m a Developer from Atlanta,
+            Georgia.
+          </h2>
+          <img class="image" src="./images/Headshot.jpg" />
+        </section>
+        <section class="about-content">
+          <h2 class="section-header" style="margin-top:0;">
+            About:
+          </h2>
           <p>
-            Heatseeker is an app that helps sneaker heads land the hottest new
-            sneakers from local sneaker stores when they’re released. Heatseeker
-            is a true passion project of mine, as I love collecting sneakers
-            myself. As new raffles are announced, users can elect to receive
-            notifications for instant updates. The app is built in React Native,
-            with a backend using Node and Express with a PostgreSQL database. It
-            has not been released to the app stores yet, stay tuned!
+            In April of 2019 I left my job as a Product Manager to study Full
+            Stack Web Development at DigitalCrafts full-time. Previously I've
+            also had roles in QA, Project Management, and Consulting. My main
+            goal when learning how to build web apps is to one day build an app
+            that I can start a business around. I feel the best when I'm able to
+            build and implement some of the crazy ideas that I come up with.
           </p>
-          <div class="image">
-            <img
-              src="./images/Heatseeker_Screenshot.png"
-              style="display: block; margin: auto; width: 50%;"
-            />
+          <p>
+            I grew up in Atlanta, and graduated from Georgia Tech with a degree
+            in Industrial Engineering. Music is my first love - I’ve been
+            playing the Saxophone for 15 years and was a DJ in college. I also
+            have two dogs, Pepper and Tucker, who keep me sane and
+            well-exercised. Lastly I love to travel overseas, with some of my
+            favorite trips being Scotland, South Korea, and Japan.
+          </p>
+          <p>
+            If you're curious about my subtitle - going to space is at the top
+            of my bucket list. I've always been fascinated by the cosmos, and I
+            hope by the time that space tourism is within my budget I am healthy
+            enough to make it up there.
+          </p>
+        </section>
+        <section class="skills-section">
+          <h2 class="section-header">Skills:</h2>
+          <div class="skills-list">
+            <i class="skills-item devicon-html5-plain-wordmark"></i>
+            <i class="skills-item devicon-css3-plain-wordmark"></i>
+            <i class="skills-item devicon-javascript-plain"></i>
+            <i class="skills-item devicon-react-original-wordmark"></i>
+            <i class="skills-item devicon-nodejs-plain-wordmark"></i>
+            <i class="skills-item devicon-express-original-wordmark"></i>
+            <i class="skills-item devicon-postgresql-plain-wordmark"></i>
+            <i class="skills-item devicon-python-plain-wordmark"></i>
           </div>
-          <h3 class="project-header">MS Craps</h3>
-          <h3>
-            <a
-              class="fab fa-github project-info-link"
-              href="https://github.com/evmcco/MScraps"
-              target="_blank"
-            ></a>
-            <a
-              class="fas fa-external-link-alt project-info-link"
-              href="https://www.mscraps.xyz/"
-              target="_blank"
-            ></a>
-          </h3>
+        </section>
+        <section class="projects-list" style="margin-bottom: 0;">
+          <h2 class="section-header">Projects:</h2>
+          <h3 class="project-header">Heatseeker</h3>
           <p>
-            MS (Microsoft) Craps is an old-school Microsoft inspired Craps
-            simulator game I built in React. The implementation is a little
-            simpler than the game you will find in Casinos; players can wager on
-            Pass, Field, Come, and Place bets. This project was built in 3 days
-            by myself as part of my coursework at DigitalCrafts.
+            Heatseeker is a project I built to solve a problem that I, as a
+            thrifty sneakerhead, had - getting exclusive sneaker releases at
+            retail price. When a new release happens, aspiring purchasers have 3
+            options: try to beat out the bots for the shoes online, pay a
+            premium on the secondary market, or go down to their local sneaker
+            store and enter a raffle. Your odds of winning a local raffle are
+            much higher than online, but these local raffles can be hard to
+            track down. Boutiques only post about them online, and they only
+            last about 24 hours before the raffle is over. Heatseeker scans
+            Instagram, looking for sneaker boutiques posting about their
+            raffles, and centralizes all of these posts, allowing users to
+            filter on them geographically so they can know which stores near
+            them are holding raffles.
           </p>
-          <img class="image" src="./images/MSCraps_Screenshot.png" />
+          <p>
+            Heatseeker V2 is a React app, built on top of an Express API server,
+            with a PostgreSQL database hosted via Amazon RDS. ToI built a node
+            script that scrapes a collection of instagram accounts to find all
+            of their recent posts, and picks out the recent posts that are
+            related to raffles. I then built a manual validation form to grab
+            some key data from each post or reject posts in case of false
+            positives. The React front end displays all sneaker raffles posts
+            from stores all over the country, and users can submit their
+            location to filter the list down to stores within 100 miles. If
+            there are no raffles going on, users can view old raffles to get a
+            preview of what info Heatseeker has.
+          </p>
+          <div>
+            <a href="https://heatseekerapp.com" target="_blank">
+              <img class="image" src="./images/HeatseekerV2Screenshot.png"
+            /></a>
+          </div>
           <h3 class="project-header">DigitalCrafts Project Database</h3>
           <h3>
             <a
               class="fab fa-github project-info-link"
               href="https://github.com/evmcco/DCPD"
-              target="_blank"
-            ></a>
-            <a
-              class="fas fa-external-link-alt project-info-link"
-              href="http://ec2-18-224-8-223.us-east-2.compute.amazonaws.com/"
               target="_blank"
             ></a>
           </h3>
@@ -155,17 +159,17 @@
             can submit a project to the database (via Slack authentication), and
             the database is viewable to everyone.
           </p>
-          <img class="image" src="./images/DCPD_Screenshot.png" />
+          <a
+            href="http://ec2-18-224-8-223.us-east-2.compute.amazonaws.com/"
+            target="_blank"
+          >
+            <img class="image" src="./images/DCPD_Screenshot.png"
+          /></a>
           <h3 class="project-header">To Mom, Love Evan</h3>
           <h3>
             <a
               class="fab fa-github project-info-link"
               href="https://github.com/evmcco/tomomloveevan"
-              target="_blank"
-            ></a>
-            <a
-              class="fas fa-external-link-alt project-info-link"
-              href="http://www.tomomloveevan.com/"
               target="_blank"
             ></a>
           </h3>
@@ -176,17 +180,14 @@
             opportunity to learn Three.js, a javascript library for 3d image
             rendering, built on WebGL.
           </p>
-          <img class="image" src="./images/TMLE_GIF.gif" />
+          <a href="http://www.tomomloveevan.com/" target="_blank">
+            <img class="image" src="./images/TMLE_GIF.gif"
+          /></a>
           <h3 class="project-header">Astrologic</h3>
           <h3>
             <a
               class="fab fa-github project-info-link"
               href="https://github.com/evmcco/Astrologic-Fantasy-Sports"
-              target="_blank"
-            ></a>
-            <a
-              class="fas fa-external-link-alt project-info-link"
-              href="http://ec2-3-17-12-9.us-east-2.compute.amazonaws.com/"
               target="_blank"
             ></a>
           </h3>
@@ -199,54 +200,13 @@
             utilzies 2 APIs: the Wikipedia API to return player informationa and
             photos, and an Astrology API to return horoscope data.
           </p>
-          <img class="image" src="./images/Astrologic_Screenshot.png" />
-          <h3 class="project-header">Tower</h3>
-          <h3>
-            <a
-              class="fab fa-github project-info-link"
-              href="https://github.com/evmcco/tower"
-              target="_blank"
-            ></a>
-          </h3>
-          <p>
-            Tower is a pygame project for DigitalCrafts. I was inspired by some
-            of my favorite video games: Dungeon Crawl Stone Soup and Tiny Rogue.
-            As you traverse through the Tower, you encounter more and more
-            enemies, randomly placed throughout the room. The game technically
-            has no end, as each level continues to add to the monsters you must
-            defeat.
-          </p>
-          <img
-            class="image"
-            src="./images/Tower_GIF2.gif"
-            style="border:none;"
-          />
-        </div>
-        <h2>Skills:</h2>
-        <div class="skills-list">
-          <h1 class="skills-item">
-            <i class="devicon-html5-plain-wordmark"></i>
-          </h1>
-          <h1 class="skills-item">
-            <i class="devicon-css3-plain-wordmark"></i>
-          </h1>
-          <h1 class="skills-item"><i class="devicon-javascript-plain"></i></h1>
-          <h1 class="skills-item">
-            <i class="devicon-react-original-wordmark"></i>
-          </h1>
-          <h1 class="skills-item">
-            <i class="devicon-nodejs-plain-wordmark"></i>
-          </h1>
-          <h1 class="skills-item">
-            <i class="devicon-express-original-wordmark"></i>
-          </h1>
-          <h1 class="skills-item">
-            <i class="devicon-postgresql-plain-wordmark"></i>
-          </h1>
-          <h1 class="skills-item">
-            <i class="devicon-python-plain-wordmark"></i>
-          </h1>
-        </div>
+          <a
+            href="http://ec2-3-17-12-9.us-east-2.compute.amazonaws.com/"
+            target="_blank"
+          >
+            <img class="image" src="./images/Astrologic_Screenshot.png"
+          /></a>
+        </section>
       </div>
     </main>
   </body>
