--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </p>
           <p>
             Heatseeker V2 is a React app, built on top of an Express API server,
-            with a PostgreSQL database hosted via Amazon RDS. ToI built a node
+            with a PostgreSQL database hosted via Amazon RDS. I built a node
             script that scrapes a collection of instagram accounts to find all
             of their recent posts, and picks out the recent posts that are
             related to raffles. I then built a manual validation form to grab
